Ported Wizard and wizard controller to Habanero.UI.Base Finished port of ReadOnlyGridWithButtonsGiz.cs and changed its name to ReadOnlyGridControlGiz.cs Incorporated the FilterControl onto the ReadOnlyGridControl and hooked up the filtering events. The developer can make the filter or the buttons invisible. This should therefore be the only ReadOnlyGrid control used.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Grid\TestReadOnlyGrid.cs" />
     <Compile Include="LayoutManager\TestBorderLayoutManager.cs" />
     <Compile Include="Grid\TestReadOnlyGridButtonControl.cs" />
-    <Compile Include="Grid\TestReadOnlyGridWithButtons.cs" />
+    <Compile Include="Grid\TestReadOnlyGridControl.cs" />
     <Compile Include="LayoutManager\TestGridLayoutManager.cs" />
     <Compile Include="Mappers\TestDateTimePickerMapper.cs" />
     <Compile Include="Mappers\TestCheckBoxMapper.cs" />
@@ -97,6 +97,9 @@
     <Compile Include="MultiSelector\TestMultiSelector.cs" />
     <Compile Include="MultiSelector\TestMultiSelectorModel.cs" />
     <Compile Include="TestPanelFactory.cs" />
+    <Compile Include="Wizard\TestWizardControl.cs" />
+    <Compile Include="Wizard\TestWizardController.cs" />
+    <Compile Include="Wizard\TestWizardForm.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Habanero.Base\Habanero.Base.csproj">
