Gizmox: sized datepicker better and set the format to dd MMM yyyy. Also created a method to set the CurrentPage of the grid based on the row number.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Mappers\TestControlMapper.cs" />
     <Compile Include="Mappers\TestLookupComboBoxMapper.cs" />
     <Compile Include="Mappers\TestMapperBase.cs" />
+    <Compile Include="Mappers\TestNumericUpDownIntegerMapper.cs" />
     <Compile Include="Mappers\TestTextBoxMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestControlCollection.cs" />
