--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -81,6 +81,9 @@
     <Compile Include="MultiSelectorWin.Designer.cs">
       <DependentUpon>MultiSelectorWin.cs</DependentUpon>
     </Compile>
+    <Compile Include="NumericUpDownWin.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="PanelWin.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -88,6 +91,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReadOnlyGridControlWin.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="SplitterWin.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="TextBoxWin.cs">
@@ -98,7 +104,6 @@
     </Compile>
     <Compile Include="Util\ControlsHelper.cs" />
     <Compile Include="ControlFactoryWin.cs">
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
