Filter control for DateTimePicker:  - extra tests  - removed ignore time option DateRangeComboBox - initial structure created.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -95,6 +95,7 @@
     </Compile>
     <Compile Include="TestControlFactory.cs" />
     <Compile Include="Mappers\TestControlMapperCollection.cs" />
+    <Compile Include="TestDateRangeComboBox.cs" />
     <Compile Include="TestDateTimePickerController.cs" />
     <Compile Include="TestDefaultBOCreator.cs" />
     <Compile Include="TestDefaultBOEditorForm.cs" />
