--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -55,6 +55,9 @@
     <Compile Include="ControlWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="DateRangeComboBoxWin.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="DateTimePickerWin.cs">
       <SubType>Component</SubType>
     </Compile>
