--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -56,6 +56,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DateRangeComboBoxWin.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="DateTimePickerWin.cs">
       <SubType>Component</SubType>
