Added a ControlsEnabled property to ControlMapperCollection so that the controls can be enabled/disabled easily Added tests for NumericUpDownCurrencyMapper in UI.Base, and moved NumericUpDownIntegerMapper to the correct namespace Made added items in the ReadOnlyGridControlGiz get selected after they are added Changed the WebGUI FormExceptionNotifier to use messageboxes for UserExceptions and BusinessObjectExceptions Set up the DefaultBOEditorFormGiz to focus on the first focusable control on the form when it opens

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Mappers\TestListViewCollectionController.cs" />
     <Compile Include="Mappers\TestLookupComboBoxMapper.cs" />
     <Compile Include="Mappers\TestMapperBase.cs" />
+    <Compile Include="Mappers\TestNumericUpDownCurrencyMapper.cs" />
     <Compile Include="Mappers\TestNumericUpDownIntegerMapper.cs" />
     <Compile Include="Mappers\TestTextBoxMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
