--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -53,6 +53,9 @@
     <Compile Include="ControlMappers\IColumnHeaderCollection.cs" />
     <Compile Include="ControlMappers\ListViewCollectionController.cs" />
     <Compile Include="ControlMappers\ListComboBoxMapper.cs" />
+    <Compile Include="ControlMappers\NumericUpDownCurrencyMapper.cs" />
+    <Compile Include="ControlMappers\NumericUpDownIntegerMapper.cs" />
+    <Compile Include="ControlMappers\NumericUpDownMapper.cs" />
     <Compile Include="DateTimePicker\DateRangeComboBoxManager.cs" />
     <Compile Include="DateTimePicker\DateTimePickerUtil.cs" />
     <Compile Include="DefaultBODeletor.cs" />
