Added the capability for the ReadOnlyGridControls to implement a searching mode of operation as compared to a filtering mode of operation. The above involved changes to FilterControlGiz Changed filterClauseFactory and IFilterClause (and its children) to allow the developer to pass in stringLikeDelimiter and dateTimeDelimiter to achieve the above.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -70,6 +70,7 @@
     <Compile Include="FilterController\TestCompositeFilterClause.cs" />
     <Compile Include="FilterController\TestDataViewNullFilterClause.cs" />
     <Compile Include="FilterController\TestFilterControlDate.cs" />
+    <Compile Include="FilterController\TestFilterInputBoxCollection.cs" />
     <Compile Include="Grid\TestReadOnlyGrid.cs" />
     <Compile Include="LayoutManager\TestBorderLayoutManager.cs" />
     <Compile Include="Grid\TestReadOnlyGridButtonControl.cs" />
