Added tests to panel factory to expose a bug if the classdefs do not have a uidef

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -110,7 +110,7 @@
     <Compile Include="MultiSelector\TestMultiSelectorModel.cs" />
     <Compile Include="TestListView.cs" />
     <Compile Include="Mappers\TestListComboBoxMapper.cs" />
-    <Compile Include="TestPanelFactory.cs" />
+    <Compile Include="PanelFactory\TestPanelFactory.cs" />
     <Compile Include="Wizard\TestWizardControl.cs" />
     <Compile Include="Wizard\TestWizardController.cs" />
     <Compile Include="Wizard\TestWizardForm.cs" />
