Fixed bug in BusinessObject destructor. Added test class for testing Inheritance Overriding. Improved naming of the Contains method on PropDefCol.

--- a/source/Habanero.Test.General/Habanero.Test.General.csproj
+++ b/source/Habanero.Test.General/Habanero.Test.General.csproj
@@ -192,6 +192,7 @@
     <Compile Include="TestInheritanceHeirarchySingleTable.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestInheritanceOverriding.cs" />
     <Compile Include="TestInheritanceSingleTable.cs">
       <SubType>Code</SubType>
     </Compile>
