--- a/source/Habanero.Test.General/Habanero.Test.General.csproj
+++ b/source/Habanero.Test.General/Habanero.Test.General.csproj
@@ -191,6 +191,7 @@
     <Compile Include="TestInheritanceHeirarchySingleTable.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestInheritanceOverriding.cs" />
     <Compile Include="TestInheritanceSingleTable.cs">
       <SubType>Code</SubType>
     </Compile>
