--- a/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
+++ b/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +72,9 @@
     </Compile>
     <Compile Include="DateTimePickerGiz.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="FileChooserGiz.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="FormExceptionNotifier.cs">
     </Compile>
