Started on EditableGrid. Extracted a GridInitialiser to set up the columns of ReadOnlyGridControlGiz. Added a test class for this.  This is to be reused for EditableGrid Fixed a bug in ColumnLayoutManager when controls were resized they were not being laid out again

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -72,6 +72,8 @@
     <Compile Include="FilterController\TestDataViewNullFilterClause.cs" />
     <Compile Include="FilterController\TestFilterControlDate.cs" />
     <Compile Include="FilterController\TestFilterInputBoxCollection.cs" />
+    <Compile Include="Grid\TestEditableGridControl.cs" />
+    <Compile Include="Grid\TestGridInitialiser.cs" />
     <Compile Include="Grid\TestReadOnlyGrid.cs" />
     <Compile Include="LayoutManager\TestBorderLayoutManager.cs" />
     <Compile Include="Grid\TestReadOnlyGridButtonControl.cs" />
@@ -102,6 +104,7 @@
     <Compile Include="TestDateTimePickerController.cs" />
     <Compile Include="TestDefaultBOCreator.cs" />
     <Compile Include="TestDefaultBOEditorForm.cs" />
+    <Compile Include="Grid\TestEditableGrid.cs" />
     <Compile Include="TestFileChooser.cs" />
     <Compile Include="TestGlobalUIRegistry.cs" />
     <Compile Include="TestLabel.cs" />
