--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ControlMappers\CollectionTabControlMapper.cs" />
     <Compile Include="ControlMappers\ComboBoxCollectionController.cs" />
     <Compile Include="ControlMappers\DateTimePickerMapper.cs" />
+    <Compile Include="Grid\IDataGridViewTextBoxColumn.cs" />
     <Compile Include="ICollectionTabControlMapper.cs" />
     <Compile Include="Grid\EditableGridControlManager.cs" />
     <Compile Include="Grid\GridInitialiser.cs" />
