Added Tests for ComboBoxCollectionController.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Mappers\TestCollectionTabControlMapper.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Mappers\TestComboBoxCollectionController.cs" />
     <Compile Include="Mappers\TestDateTimePickerMapper.cs" />
     <Compile Include="Mappers\TestCheckBoxMapper.cs" />
     <Compile Include="Mappers\TestControlMapper.cs" />
