Moved BoTabColControl to an interface and giz version. Made WizardControl call CanMoveOn on last step (it was only calling finish, not checked whether CanMoveOn)

--- a/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
+++ b/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
@@ -51,6 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BorderLayoutManagerGiz.cs" />
+    <Compile Include="BoTabColControlGiz.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="ButtonGroupControlGiz.cs">
       <SubType>Component</SubType>
     </Compile>
