--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -44,8 +44,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoTabColControl.cs">
-    </Compile>
     <Compile Include="ComboBoxManager.cs" />
     <Compile Include="ControlInterfaces\Events.cs" />
     <Compile Include="ControlInterfaces\IBusinessObjectControl.cs" />
@@ -57,6 +55,7 @@
     <Compile Include="ControlMappers\ComboBoxCollectionController.cs" />
     <Compile Include="ControlMappers\DateTimePickerMapper.cs" />
     <Compile Include="Grid\IDataGridViewTextBoxColumn.cs" />
+    <Compile Include="ControlInterfaces\IBoTabColControl.cs" />
     <Compile Include="ICollectionTabControlMapper.cs" />
     <Compile Include="Grid\EditableGridControlManager.cs" />
     <Compile Include="Grid\GridInitialiser.cs" />
