Added functionality to do an stringequals Filter to FilterControl Mofified the GridBase to be able to pass in a Delegate Grid Loader created ability initialise a grid with no ClassDef or UiDefName. This is required for the GridLoaderDelegate Implemented IDataGridViewImageColumn.cs

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -54,9 +54,11 @@
     <Compile Include="ControlMappers\CollectionTabControlMapper.cs" />
     <Compile Include="ControlMappers\ComboBoxCollectionController.cs" />
     <Compile Include="ControlMappers\DateTimePickerMapper.cs" />
+    <Compile Include="Grid\IDataGridViewImageColumn.cs" />
     <Compile Include="Grid\IDataGridViewTextBoxColumn.cs" />
     <Compile Include="ControlInterfaces\IBoTabColControl.cs" />
     <Compile Include="Grid\IGridControl.cs" />
+    <Compile Include="Grid\IGridInitialiser.cs" />
     <Compile Include="ICollectionTabControlMapper.cs" />
     <Compile Include="Grid\EditableGridControlManager.cs" />
     <Compile Include="Grid\GridInitialiser.cs" />
